--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ openTelemetry = "1.33.0"
 mariadb = "3.5.1"
 log4j2 = "2.24.3"
 commonsCsv = "1.10.0"
+springdoc = "2.8.3"
 
 [libraries]
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
@@ -21,6 +22,7 @@ lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" 
 mariadb-java-client = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb" }
 ta-lib = { group = "com.tictactec", name = "ta-lib", version.ref = "taLib" }
 commons-csv = { group = "org.apache.commons", name = "commons-csv", version.ref = "commonsCsv" }
+springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version.ref = "springdoc" }
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "springBoot" }
