--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ java = "21"
 springBoot = "3.4.1"
 springDependencyManagement = "1.1.7"
 springCloud = "2024.0.0"
-lombok = "1.18.36"
+lombok = "1.18.38"
 jib = "3.4.4"
 taLib = "0.4.0"
 openTelemetry = "1.33.0"
@@ -12,7 +12,7 @@ log4j2 = "2.24.3"
 commonsCsv = "1.10.0"
 springdoc = "2.8.3"
 spotless = "7.0.1"
-springAi = "1.0.0-SNAPSHOT"
+springAi = "1.1.2"
 
 [libraries]
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
@@ -25,8 +25,8 @@ mariadb-java-client = { group = "org.mariadb.jdbc", name = "mariadb-java-client"
 ta-lib = { group = "com.tictactec", name = "ta-lib", version.ref = "taLib" }
 commons-csv = { group = "org.apache.commons", name = "commons-csv", version.ref = "commonsCsv" }
 springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version.ref = "springdoc" }
-spring-ai-mcp-server-spring-boot-starter = { group = "org.springframework.ai", name = "spring-ai-mcp-server-spring-boot-starter", version.ref = "springAi" }
-mcp-java-sdk = { group = "io.modelcontextprotocol.sdk", name = "mcp-sdk", version = "0.1.0" }
+spring-ai-mcp-server-spring-boot-starter = { group = "org.springframework.ai", name = "spring-ai-starter-mcp-server", version.ref = "springAi" }
+mcp-java-sdk = { group = "io.modelcontextprotocol.sdk", name = "mcp", version = "0.17.2" }
 junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher" }
 
 [plugins]
